data/derived/fa15/progs/unify/prog2570.ml.out
Characters 74-103:
  else loop (sumList(digitsOfInt x)) + y in
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
